// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`To-Do list GraphQL API client createTodo should create a new To-Do item 1`] = `
{
  "completed": false,
  "description": "Milk, bread, eggs, cheese",
  "id": "1",
  "title": "Buy groceries",
}
`;

exports[`To-Do list GraphQL API client fetchTodos should fetch all To-Do items 1`] = `
[
  {
    "completed": false,
    "description": "Milk, bread, eggs, cheese",
    "id": "1",
    "title": "Buy groceries",
  },
  {
    "completed": true,
    "description": "",
    "id": "2",
    "title": "Do laundry",
  },
  {
    "completed": false,
    "description": "Fix leaky faucet in the bathroom",
    "id": "3",
    "title": "Call plumber",
  },
]
`;

exports[`To-Do list GraphQL API client todoById should get a todo by its id 1`] = `
{
  "completed": false,
  "description": "Milk, bread, eggs, cheese",
  "id": "1",
  "title": "Buy groceries",
}
`;

exports[`the pact file can be generated and match with the snapshot 1`] = `
{
  "consumer": {
    "name": "test-consumer",
  },
  "interactions": [
    {
      "description": "POST /graphql returns status 200",
      "request": {
        "body": {
          "cookies": {},
          "operationName": "todos",
          "operationType": "query",
          "query": "
    query todos {
      todos {
        id
        title
        description
        completed
      }
    }
  ",
          "variables": {},
        },
        "headers": {
          "content-type": "application/json",
        },
        "method": "POST",
        "path": "/graphql",
        "query": undefined,
      },
      "response": {
        "body": {
          "data": {
            "todos": [
              {
                "completed": false,
                "description": "Milk, bread, eggs, cheese",
                "id": "1",
                "title": "Buy groceries",
              },
              {
                "completed": true,
                "description": "",
                "id": "2",
                "title": "Do laundry",
              },
              {
                "completed": false,
                "description": "Fix leaky faucet in the bathroom",
                "id": "3",
                "title": "Call plumber",
              },
            ],
          },
        },
        "headers": {
          "content-type": "application/json",
        },
        "status": 200,
      },
    },
    {
      "description": "graphql api returns a 500 http error",
      "providerState": "will return a 500 http error",
      "request": {
        "body": {
          "query": "
    query todos {
      todos {
        id
        title
        description
        completed
      }
    }
  ",
        },
        "headers": {
          "content-type": "application/json",
        },
        "method": "POST",
        "path": "/graphql",
        "query": undefined,
      },
      "response": {
        "body": null,
        "headers": {
          "content-type": "application/json",
        },
        "status": 500,
      },
    },
    {
      "description": "POST /graphql returns status 200 - 1",
      "request": {
        "body": {
          "cookies": {},
          "operationName": "todos",
          "operationType": "query",
          "query": "
    query todos {
      todos {
        id
        title
        description
        completed
      }
    }
  ",
          "variables": {},
        },
        "headers": {
          "content-type": "application/json",
        },
        "method": "POST",
        "path": "/graphql",
        "query": undefined,
      },
      "response": {
        "body": {
          "data": {
            "todos": [],
          },
        },
        "headers": {
          "content-type": "application/json",
        },
        "status": 200,
      },
    },
    {
      "description": "POST /graphql returns status 200 - 1",
      "request": {
        "body": {
          "cookies": {},
          "operationName": "createTodo",
          "operationType": "mutation",
          "query": "
    mutation createTodo($title: String!, $description: String) {
      createTodo(input: { title: $title, description: $description }) {
        id
        title
        description
        completed
      }
    }
  ",
          "variables": {
            "title": "Buy groceries",
          },
        },
        "headers": {
          "content-type": "application/json",
        },
        "method": "POST",
        "path": "/graphql",
        "query": undefined,
      },
      "response": {
        "body": {
          "data": {
            "createTodo": {
              "completed": false,
              "description": "Milk, bread, eggs, cheese",
              "id": "1",
              "title": "Buy groceries",
            },
          },
        },
        "headers": {
          "content-type": "application/json",
        },
        "status": 200,
      },
    },
    {
      "description": "POST /graphql returns status 200 - 1",
      "request": {
        "body": {
          "cookies": {},
          "operationName": "todoById",
          "operationType": "query",
          "query": "
    query todoById($id: ID) {
      todoById(id: $id) {
        id
        title
        description
        completed
      }
    }
  ",
          "variables": {
            "id": "1",
          },
        },
        "headers": {
          "content-type": "application/json",
        },
        "method": "POST",
        "path": "/graphql",
        "query": undefined,
      },
      "response": {
        "body": {
          "data": {
            "todoById": {
              "completed": false,
              "description": "Milk, bread, eggs, cheese",
              "id": "1",
              "title": "Buy groceries",
            },
          },
        },
        "headers": {
          "content-type": "application/json",
        },
        "status": 200,
      },
    },
    {
      "description": "POST /graphql returns status 200 - 1",
      "request": {
        "body": {
          "cookies": {},
          "operationName": "todoById",
          "operationType": "query",
          "query": "
    query todoById($id: ID) {
      todoById(id: $id) {
        id
        title
        description
        completed
      }
    }
  ",
          "variables": {
            "id": "1",
          },
        },
        "headers": {
          "content-type": "application/json",
        },
        "method": "POST",
        "path": "/graphql",
        "query": undefined,
      },
      "response": {
        "body": {
          "errors": [
            {
              "message": "The todo item 1 is not found",
            },
          ],
        },
        "headers": {
          "content-type": "application/json",
        },
        "status": 200,
      },
    },
  ],
  "metadata": {
    "client": {
      "name": "pact-js-mock",
    },
    "pactSpecification": {
      "version": "2.0.0",
    },
  },
  "provider": {
    "name": "graphql",
  },
}
`;
